--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@ permalink: /
         <div class="block">
           <div class="section-title">
             <h2>About Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+            <p>Lover of all things beauty, health, and fashion, I’m a Los Angeles native and a self-proclaimed social media junkie. I’m a recent Master of Communication Management (MCM) graduate from the BEAUTIFUL University of Southern California – FIGHT ON!! – and as any true Trojan would say, I wouldn’t have wanted to get my education anywhere else. My time at USC was nothing short of amazing and I’m excited to embark on my journey in the Public Relations world. Being able to utilize my love for writing and creating in my career is a dream come true!</p>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
+          <p>Outside of academics and my education, I do have other interests and passions (although it didn’t seem like it during grad school!) I have a passion for competitive cheerleading and have been dedicated to the sport, first as an athlete and now as a coach, for 16 years. My love for the sport grows every time I see an athlete accomplish a goal, or a team overcomes a hurdle they’ve been struggling with.</p>
         </div>
+        <p>I’m a HUGE Disney fan and an Annual Passholder to Disneyland! I’m also lucky enough to find myself at Walt Disney World every May for cheerleading nationals. My all-time favorite character is Winnie the Pooh – I just love his positive outlook on the world and his light-hearted personality. As for princesses, I would have to say Belle ranks as number one. The Beauty and the Beast is such a great story. Both the original movie and live action film with Emma Watson are incredible.
+
+Oh! I’m also obsessed with my chocolate lab, Barkley (yes, another USC reference) and love to get outside whenever I can! </p>
+      </div>
       </div><!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
         <div class="block">
