--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@ permalink: /
           </div>
           <p>Outside of academics and my education, I do have other interests and passions (although it didn’t seem like it during grad school!) I have a passion for competitive cheerleading and have been dedicated to the sport, first as an athlete and now as a coach, for 16 years. My love for the sport grows every time I see an athlete accomplish a goal, or a team overcomes a hurdle they’ve been struggling with.</p>
         </div>
-        
       </div><!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
         <div class="block">
@@ -44,10 +43,9 @@ permalink: /
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-6">
-      <h2>WE BELIEVE IN GREAT IDEAS</h2>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <h2>I BELIEVE IN GREAT IDEAS</h2>
+      <p>I’m a HUGE Disney fan and an Annual Passholder to Disneyland! I’m also lucky enough to find myself at Walt Disney World every May for cheerleading nationals. My all-time favorite character is Winnie the Pooh – I just love his positive outlook on the world and his light-hearted personality. As for princesses, I would have to say Belle ranks as number one. The Beauty and the Beast is such a great story. Both the original movie and live action film with Emma Watson are incredible.</p>
+      <p>Oh! I’m also obsessed with my chocolate lab, Barkley (yes, another USC reference) and love to get outside whenever I can! </p>
       <a href="#" class="btn btn-view-works">View Works</a>
     </div>
   </div>
