--- a/Resume.html
+++ b/Resume.html
@@ -86,7 +86,7 @@ permalink: /work/
                   </li>
                   <li class="mix Video">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="{{ site.baseurl }}/work0.html">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Tesla Motors</h2>
