--- a/work.html
+++ b/work.html
@@ -42,6 +42,7 @@ permalink: /work/
                           <div class="position-center">
                             <h2>Tesla Motors</h2>
                             <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                            <li><a href="{{ site.baseurl }}/work0.html">Blog</a></li>
 
                           </div>
                         </div>
