--- a/work.html
+++ b/work.html
@@ -36,13 +36,13 @@ permalink: /work/
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
                     <li class="mix Branding">
-                      <a href="{{ site.baseurl }}/Resume.html">
+                      <a href="{{ site.baseurl }}/contact.html">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
                           <div class="position-center">
                             <h2>Tesla Motors</h2>
                             <p>Labore et dolore magna aliqua. Ut enim ad </p>
-          
+
                           </div>
                         </div>
                       </a>
