--- a/work.html
+++ b/work.html
@@ -125,7 +125,7 @@ permalink: /work/
           <div id="clients-logo" class="owl-carousel">
             <div class="clients-logo-img">
               <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-              <a href="daronobrien.me">
+              <li><a href="daronobrien.me">Resume</a></li>
             </div>
             <div class="clients-logo-img">
               <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
