--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@ permalink: /work/
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
                     <li class="mix Branding">
-                      <a href="{{ site.baseurl }}/img/Samples2FPortfolio-1.jpg">
+                      <a href="{{ site.baseurl }}/img/Samples2FPortfolio-1.pdf">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
                           <div class="position-center">
