--- a/work.html
+++ b/work.html
@@ -40,32 +40,32 @@ permalink: /work/
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
                           <div class="position-center">
-                            <h2>Tesla Motors</h2>
-                            <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                            <h2>Social Media Samples</h2>
+                            <p></p>
 
                           </div>
                         </div>
                       </a>
                   </li>
                   <li class="mix Websites">
-                    <a href="daronobrien.me">
+                    <a href="{{ site.baseurl }}img/HarleyDavidsonCommPlan.pdf">
                       <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                          <h2>Harley Davidson</h2>
+                          <p>Communication Plan </p>
 
                         </div>
                       </div>
                     </a>
                   </li>
                   <li class="mix Graphic">
-                    <a href="#">
+                    <a href="{{ site.baseurl }}/img/MarketingPlan-Sample.pdf">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                          <h2>SolPower</h2>
+                          <p>Marketing Plan </p>
 
                         </div>
                       </div>
