--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ permalink: /
       <h2>I BELIEVE IN GREAT IDEAS</h2>
       <p>I’m a HUGE Disney fan and an Annual Passholder to Disneyland! I’m also lucky enough to find myself at Walt Disney World every May for cheerleading nationals. My all-time favorite character is Winnie the Pooh – I just love his positive outlook on the world and his light-hearted personality. As for princesses, I would have to say Belle ranks as number one. The Beauty and the Beast is such a great story. Both the original movie and live action film with Emma Watson are incredible.</p>
       <p>Oh! I’m also obsessed with my chocolate lab, Barkley (yes, another USC reference) and love to get outside whenever I can! </p>
-      <a href="#" class="btn btn-view-works">View Works</a>
+      <a href="{{ site.baseurl }}/work" class="btn btn-view-works">View Works</a>
     </div>
   </div>
 </div>
