--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ permalink: /
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-6">
-      <h2>I BELIEVE IN GREAT IDEAS</h2>
+      <h2>I BELIEVE IN SUCCESS</h2>
       <p>I’m a HUGE Disney fan and an Annual Passholder to Disneyland! I’m also lucky enough to find myself at Walt Disney World every May for cheerleading nationals. My all-time favorite character is Winnie the Pooh – I just love his positive outlook on the world and his light-hearted personality. As for princesses, I would have to say Belle ranks as number one. The Beauty and the Beast is such a great story. Both the original movie and live action film with Emma Watson are incredible.</p>
       <p>Oh! I’m also obsessed with my chocolate lab, Barkley (yes, another USC reference) and love to get outside whenever I can! </p>
       <a href="{{ site.baseurl }}/work" class="btn btn-view-works">View Works</a>
@@ -127,9 +127,9 @@ permalink: /
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <h2>I help companies build delightful digital experiences.</h2>
+          <p>Read more about what I do and our philosophy of PR.</p>
+          <a class="btn btn-default btn-call-to-action" href="{{ site.baseurl }}/Contact" >Tell Me Your Vision</a>
         </div>
       </div>
     </div>
@@ -140,7 +140,7 @@ permalink: /
   <div class="container">
     <div class="row">
       <div class="section-title text-center">
-        <h2>Fun Facts About Us</h2>
+        <h2>Fun Facts About Anna-Mari</h2>
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
       </div>
     </div>
