--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Contact us!
+title: Contact Me!
 permalink: /contact/
 ---
 
@@ -23,7 +23,8 @@ permalink: /contact/
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
-          <form>
+          <form action="https://formspree.io/dsobrien1@gmail.com"
+      method="POST">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Your Name">
             </div>
