--- a/work.html
+++ b/work.html
@@ -10,8 +10,8 @@ permalink: /work/
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>Just some of our latest projects.</h1>
-                    <p>Don’t just take our word for it. Check out some of our latest work.</p>
+                    <h1>Just some of my latest writing samples.</h1>
+                    <p></p>
                 </div>
             </div>
         </div>
@@ -72,42 +72,6 @@ permalink: /work/
 
                     </a>
                   </li>
-                  <li class="mix design">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix Video">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix Graphic">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
-                    </a>
-                  </li>
                 </ul>
               </div>
             </div>
@@ -116,56 +80,6 @@ permalink: /work/
     </div>
 </section>
 
-<!-- Clients Logo Section Start -->
-<section id="clients-logo-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <div id="clients-logo" class="owl-carousel">
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-              <li><a href="{ site.baseurl }}/img/Samples2FPortfolio-1.jpg"></a></li>
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 
 <!-- Call to action Start -->
@@ -174,9 +88,9 @@ permalink: /work/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <h2>Contact me for more samples</h2>
+          <p></p>
+          <a class="btn btn-default btn-call-to-action" href="{{ site.baseurl }}/contact" >Contact Anna</a>
         </div>
       </div>
     </div>
