--- a/work.html
+++ b/work.html
@@ -27,10 +27,8 @@ permalink: /work/
                 <ul>
                     <li class="filter" data-filter="all">Everything</li>
                     <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
+                    <li class="filter" data-filter=".Websites">Communication</li>
+                    <li class="filter" data-filter=".Graphic">Marketing</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
