--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,7 @@ permalink: /contact/
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
-          <form action="https://formspree.io/dsobrien1@gmail.com"
-      method="POST">
+          <form action="https://formspree.io/dsobrien1@gmail.com" method="POST">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Your Name">
             </div>
