--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@ permalink: /contact/
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
-          <form method="POST" action="https://formspree.io/dsobrien1@gmail.com">
+          <form name="contact" method="POST" netlify>
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Your Name">
             </div>
