--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@ permalink: /contact/
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
-          <form name="contact" method="POST" netlify>
+          <form method="POST" action="https://formspree.io/dsobrien1@gmail.com">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Your Name">
             </div>
@@ -38,7 +38,7 @@ permalink: /contact/
       </div>
       <div class="col-md-6 col-sm-12">
         <div class="block">
-          <form>
+          <form method="POST" action="https://formspree.io/dsobrien1@gmail.com">
             <div class="form-group-2">
               <textarea class="form-control" rows="3" placeholder="Your Message"></textarea>
             </div>
